--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -48,6 +48,7 @@ jobs:
         id: get_latest_release
         run: |
           # Checkout to master
+          git config pull.rebase false
           git pull origin develop
           
           # Fetch all tags from the repository.
