--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -29,5 +29,5 @@ jobs:
 
       - name: FTP
         run: |
-          echo ${{ secrets.FTP_USERNAME }}
-          ls ./auxiliar-connector/target/*.jar
+          echo ${{ secrets.FTP_PASSWORD }}
+          ls -1 ./auxiliar-connector/target/*.jar
