--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -30,5 +30,5 @@ jobs:
       - name: FTP
         run: |
           echo ${{ secrets.FTP_PASSWORD }}
-          jarfile=$(ls -1 ./auxiliar-connector/target/*.jar)
+          jarfile=$(ls -1 ./auxiliar-connector/target/*.jar | xargs basename)
           echo "Filename: $jarfile"
