--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Build
         run: |
           mvn clean
+          mvn -q --projects auxiliar-connector --also-make install
 
       - name: FTP
         run: |
