--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -26,10 +26,23 @@ jobs:
       - name: Build
         run: |
           mvn -q clean
-          mvn -q --projects auxiliar-connector --also-make install
+          mvn -q --projects auxiliar-connector,support-connector --also-make install
 
       - name: FTP
+        id: ftp_files
         run: |
-          echo ${{ secrets.FTP_PASSWORD }}
-          jarfile=$(ls -1 ./auxiliar-connector/target/*.jar | xargs basename)
-          echo "Filename: $jarfile"
+          names=auxiliar-connector,support-connector
+          echo "files=$names" >> $GITHUB_OUTPUT
+
+      - name: Upload JAR files to FTP
+        uses: samuelmeuli/ftp-upload-action@v3
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          remote_path: /gabriel.goncalves
+          local-path: |
+            {% for file in steps.ftp_files.outputs.files.split(",") %}
+            ./{{ file }}/target/*.jar
+            {% endfor %}
+          needs: ftp_files
