--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: FTP
         id: ftp_files
         run: |
-          names=auxiliar-connector,support-connector
+          names=auxiliar-connector
           echo "files=$names" >> $GITHUB_OUTPUT
 
       - name: Upload JAR files to FTP
@@ -40,8 +40,5 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /gabriel.goncalves
-          local-dir: |
-            {% for file in fromJSON(steps.ftp_files.outputs.files).split(',') %}
-            ./{{ file }}/target/*.jar/
-            {% endfor %}
+          server-dir: /gabriel.goncalves/
+          local-dir: ${{ steps.ftp_files.outputs.files }}/target/*.jar/
