--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -31,8 +31,8 @@ jobs:
       - name: FTP
         id: ftp_files
         run: |
-          names=auxiliar-connector
-          echo "files=$names" >> $GITHUB_OUTPUT
+          file=(ls -1 ./auxiliar-connector/target/*.jar | xargs basename)
+          echo "files=file" >> $GITHUB_OUTPUT
 
       - name: Upload JAR files to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
@@ -41,4 +41,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /gabriel.goncalves/
-          local-dir: ${{ steps.ftp_files.outputs.files }}/target/*.jar/
+          local-dir: auxiliar-connector/target/${{ steps.ftp_files.outputs.files }}.jar/
