--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -32,7 +32,8 @@ jobs:
         id: ftp_files
         run: |
           file=$(ls -1 ./auxiliar-connector/target/*.jar | xargs basename)
-          echo "files=file" >> $GITHUB_OUTPUT
+          echo "Filename: $file"
+          echo "files=$file" >> $GITHUB_OUTPUT
 
       - name: Upload JAR files to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
@@ -41,4 +42,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /gabriel.goncalves/
-          local-dir: auxiliar-connector/target/${{ steps.ftp_files.outputs.files }}.jar/
+          local-dir: /auxiliar-connector/target/${{ steps.ftp_files.outputs.files }}.jar/
