--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -44,4 +44,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /gabriel.goncalves/
-          local-dir: /auxiliar-connector/target/${{ steps.ftp_files.outputs.files }}/
+          local-dir: ./auxiliar-connector/target/${{ steps.ftp_files.outputs.files }}/
