--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Criar pasta dentro de target
         run: |
+          ls ./auxiliar-connector
           mkdir automation/auxiliar-connector/target/releaseTest
           mv ${{steps.ftp_files.outputs.full_path}} ./auxiliar-connector/target/releaseTest/
           ls -l releaseTest
