--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -42,7 +42,7 @@ jobs:
           ls ./auxiliar-connector
           mkdir -p ./auxiliar-connector/target/releaseTest
           mv ${{steps.ftp_files.outputs.full_path}} ./auxiliar-connector/target/releaseTest/
-          ls -l releaseTest
+          ls -l ./auxiliar-connector/target/releaseTest/
 
       - name: Upload files to ftp server
         uses: wangyucode/sftp-upload-action@v2.0.2
