Upload file to FTP

--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -38,8 +38,8 @@ jobs:
           filesPath=()
           for name in "${modules_array[@]}"
           do
-            fileNames+=$(ls -1 ./$name/target/*.jar | xargs basename)
-            filesPath+=$(ls -1 ./$name/target/*.jar)
+            fileNames+=($(ls -1 ./$name/target/*.jar | xargs basename))
+            filesPath+=($(ls -1 ./$name/target/*.jar))
           done
           
           echo "Filenames array output1: ${fileNames[0]}"
