--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -46,17 +46,8 @@ jobs:
           echo "Filenames array output2: ${fileNames[1]}"
           echo "Path array output: ${filesPath[@]}"
           
-          echo "jarName:" >> $GITHUB_OUTPUT
-          for name in "${fileNames[@]}"
-          do
-            echo "  - $name" >> $GITHUB_OUTPUT
-          done
-          
-          echo "jarPath:" >> $GITHUB_OUTPUT
-          for path in "${filesPath[@]}"
-          do
-            echo "  - $path" >> $GITHUB_OUTPUT
-          done
+          echo ::set-output name=jarName::"${fileNames[@]}"
+          echo ::set-output name=jarPath::"${filesPath[@]}"
           
           echo "Name output: $jarName"
           echo "Path output: $jarPath"
