--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -55,8 +55,8 @@ jobs:
         run: |
           echo "Jar names: ${{ steps.ftp_files.outputs.jarName }}"
           echo "Jar paths: ${{ steps.ftp_files.outputs.jarPath }}"
-          jarNames=${{ steps.ftp_files.outputs.jarName }}"
-          jarPaths=${{ steps.ftp_files.outputs.jarPath }}"
+          jarNames="${{ steps.ftp_files.outputs.jarName }}"
+          jarPaths="${{ steps.ftp_files.outputs.jarPath }}"
           
           tag=10.65.0.1
           connectorName=common
